# rust-poster

./: Cargo.toml
src/: core.rs  handler.rs  lib.rs
src/core/: core.rs
src/handler/: background_handler.rs  canvas_handler.rs  canvash_handler.rs  imagecircle_handler.rs  line_handler.rs  output_handler.rs  qrcode_handler.rs  rectangle_handler.rs  text_handler.rs
