[package]
name = "rustposter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
rusttype = "0.9.3"
reqwest = { version = "0.11", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
qrcode = "0.13.0"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde_urlencoded]
version = "0.7.1"

[dependencies.conv]
version = "0.3.3"